--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # splash_screen
   animated_splash_screen: ^1.3.0
   lottie: ^2.3.2
+  # homepage_carousel
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - asset/lottie/
+    - asset/img/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
